--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ header {
     width: calc(100% - 10%);
     margin: 0 auto;
     /* margin: 0px 22px; */
-    padding: 30px 22px;
+    padding: 21px;
     border-right: 1px solid #000;
     border-left: 1px solid #000;
 }
@@ -95,14 +95,14 @@ img {
 .header__menu {
     display: flex;
     align-items: center;
-    gap: 48px;
+    gap: 31px;
 }
 
 .header__menu-link {
-    padding: 18px 52px;
+    padding: 16px 44px;
     line-height: calc(1 + 0.3 / var(--font-body-scale));
     border-radius: 50%;
-    font-size: 21px;
+    font-size: 14px;
     transition: .2s ease-in-out;
 }
 
@@ -141,7 +141,8 @@ img {
 .content__main {
     /* width: 697px; */
     border-right: 1px solid #000;
-    width: calc(50% - 0.5rem);
+    /* width: calc(50% - 0.5rem); */
+    width: 50%;
 }
 
 .content__words {
@@ -199,20 +200,21 @@ img {
 
 .content-desc>h3 {
     font-weight: 600;
-    font-size: 48px;
-    margin-top: 27px;
+    font-size: 26px;
+    margin-top: 26px;
     text-align: center;
 }
 
 .content-desc>p {
     color: #121212;
     font-family: 'Roboto', sans-serif;
-    font-size: 24px;
+    font-size: 14px;
     text-align: center;
 }
 
 .content__right {
-    width: calc(50% - 0.5rem);
+    width: 50%;
+    /* width: calc(50% + 0.5rem); */
     padding-top: 42px;
     text-align: center;
 }
@@ -223,7 +225,7 @@ img {
     align-items: center;
     gap: 20px;
     border-bottom: 1px solid #000;
-    padding-bottom: 42px;
+    padding-bottom: 32px;
 }
 
 .content__head {
@@ -243,8 +245,8 @@ img {
 
 .content__link {
     display: inline-block;
-    padding: 21px 154px;
-    font-size: 38px;
+    padding: 14px 86px;
+    font-size: 21px;
     text-align: center;
     color: #000;
     text-decoration: none;
@@ -330,16 +332,18 @@ img {
 }
 
 .products__figure img {
-    width: 390px;
-    height: 411px;
+    /* width: 390px;
+    height: 411px; */
     border-radius: 14px;
-    border: 1px solid #000;
     transition: all 0.4s ease-in-out;
+}
+._border img {
+    border: 1px solid #000;
 }
 
 .products__figure img:hover {
     cursor: pointer;
-    transform: scale(1.05);
+    transform: scale(1.02);
 }
 
 .swiper__pag {
@@ -352,8 +356,6 @@ img {
     justify-content: center;
     cursor: pointer;
 }
-
-
 
 .illustration {
     padding: 21px;
@@ -388,8 +390,8 @@ img {
 
 .story__name::before {
     content: '';
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     background-image: url('../img/products/fire.svg');
     background-position: center;
     background-size: cover;
@@ -398,8 +400,8 @@ img {
 
 .story__name::after {
     content: '';
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     background-image: url('../img/products/fire.svg');
     background-position: center;
     background-size: cover;
