--- a/css/style.css
+++ b/css/style.css
@@ -345,16 +345,26 @@ img {
     cursor: pointer;
     transform: scale(1.02);
 }
-
-.swiper__pag {
-    display: flex;
-    margin: 22px;
-}
-
 .swiper__btn {
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 38px;
     cursor: pointer;
+    margin: 22px;
+}
+
+.swiper__pag {
+    display: flex;
+}
+
+.image-slider .swiper-pagination {
+   bottom: 0;
+}
+
+.image-slider .swiper-pagination-fraction { 
+    font-size: 16px;
+    color: #121212BF;
 }
 
 .illustration {
@@ -570,7 +580,3 @@ img {
 
 
 
-.swiper {
-    /* width: 800px; */
-    /* height: 300px; */
-  }
