--- a/css/style.css
+++ b/css/style.css
@@ -332,8 +332,8 @@ img {
 }
 
 .products__figure img {
-    /* width: 390px;
-    height: 411px; */
+    width: 390px;
+    height: 411px;
     border-radius: 14px;
     transition: all 0.4s ease-in-out;
 }
