--- a/css/media.css
+++ b/css/media.css
@@ -101,6 +101,97 @@
         font-size: 24px;
         line-height: 32px;
     }
+
+    .about__title {
+        width: 100%;
+        margin: 0px 22px;
+        padding-top: 44px;
+        font-size: 42px;
+        line-height: 53px;
+    }
+
+    .about__desc {
+        gap: 12px;
+    }
+
+    .about__par {
+        max-width: 320px;
+        font-size: 12px;
+        line-height: 19px;
+    }
+}
+
+@media (width <=1023px) {
+    .about {
+        flex-direction: column;
+    }
+
+    .about__content {
+        width: 100%;
+        border-right: none;
+    }
+
+    .about__desc {
+        background: none;
+        aspect-ratio: 0;
+        width: 100%;
+        padding: 59px;
+    }
+
+    .about__desc {
+        gap: 24px;
+    }
+
+    .about__par {
+        max-width: 80%;
+        font-size: 24px;
+        line-height: 28px;
+    }
+}
+
+@media (width <=780px) {
+    .content-desc>h3 {
+        font-size: 18px;
+        margin-top: 21px;
+    }
+
+    .content__head {
+        font-size: 34px;
+        line-height: 38px;
+        margin: 0px 12px;
+    }
+
+    .content__span {
+        font-size: 21px;
+    }
+    .content__right {
+        padding-top: 20px;
+    }
+    .content__desc {
+        gap: 2px;
+        padding-bottom: 20px;
+    }
+
+    .content-desc>p {
+        font-size: 12px;
+    }
+
+    .content__text {
+        padding: 16px 0px;
+    }
+
+    .products__title {
+        font-size: 42px;
+        line-height: 43px;
+    }
+
+    .products__img img {
+        height: 74px;
+    }
+    .footer__contacts {
+        flex-direction: column;
+        gap: 10px;
+    }
 }
 
 @media (width <=560px) {
@@ -116,5 +207,7 @@
     .swiper-btn-prev, .swiper-btn-next {
         display: none;
     }
-    
+
+
+
 }
