--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,15 @@ img {
     border-bottom: 1px solid #000;
 }
 
+.content__desc-mobile {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    border-bottom: 1px solid #000;
+    padding-bottom: 32px;
+}
+
 .content__text {
     border-bottom: 1px solid #000;
     padding: 24px 0px;
