--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,6 @@ footer {
     transition: background 0.6s ease-in;
 }
 
-
 footer:hover {
     background: url(../img/footer/footer-flames-active.svg) no-repeat;
     background-color: #FB4B4D;
@@ -82,7 +81,6 @@ p, span {
 }
 
 img {
-    /* max-width: 100%; */
     width: 100%;
     height: auto;
     object-fit: cover;
@@ -91,6 +89,7 @@ img {
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .header__menu {
@@ -133,6 +132,42 @@ img {
 .header__circle-right {
     background-color: #8B83F6;
 }
+
+.hamburger {
+   display: none;
+}
+
+.hamburger.ham-mobile {
+    display: block;
+    float: left;
+    text-align: center;
+}
+
+.hamburger .hamburger__line {
+    width: 26px;
+    height: 2px;
+    background-color: #121212;
+    display: block;
+    margin: 6px auto;
+    transition: all 0.3s ease-in-out;
+}
+
+.hamburger:hover {
+    cursor: pointer;
+}
+
+
+.hamburger.ham-active .hamburger__line:nth-child(2){
+    opacity: 0;
+  }
+  
+  .hamburger.ham-active .hamburger__line:nth-child(1){
+    transform: translateY(6px) rotate(45deg);
+  }
+  
+  .hamburger.ham-active .hamburger__line:nth-child(3){
+    transform: translateY(-10px) rotate(-45deg);
+  }
 
 .content {
     display: flex;
@@ -303,19 +338,12 @@ img {
     padding: 20px;
 }
 
-.swiper-wrapper {
-    padding: 20px;
-}
-
 .products__item {
     display: flex;
     justify-content: center;
     background-image: url(../img/products/bg.svg);
     background-repeat: no-repeat;
     background-position: top center;
-    /* background-position: bottom center; */
-    /* background-size: cover; */
-    /* width: 100%; */
     min-height: 658px;
 }
 
@@ -347,6 +375,7 @@ img {
     border-radius: 14px;
     transition: all 0.4s ease-in-out;
 }
+
 ._border img {
     border: 1px solid #000;
 }
@@ -355,6 +384,12 @@ img {
     cursor: pointer;
     transform: scale(1.02);
 }
+
+.swiper-wrapper {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .swiper__btn {
     display: flex;
     justify-content: center;
@@ -369,10 +404,10 @@ img {
 }
 
 .image-slider .swiper-pagination {
-   bottom: 0;
+    bottom: 0;
 }
 
-.image-slider .swiper-pagination-fraction { 
+.image-slider .swiper-pagination-fraction {
     font-size: 16px;
     color: #121212BF;
 }
@@ -397,11 +432,11 @@ img {
     justify-content: center;
     align-items: center;
 }
+
 .about__title {
     max-width: 590px;
     padding-top: 54px;
     padding-bottom: 23px;
-    /* margin: 0 auto; */
     hyphens: auto;
     text-align: center;
     font-size: 58px;
@@ -526,67 +561,65 @@ img {
     --fireDuration: 1s;
     --blur: 0.4px;
     --fireSize: 60px;
-  }
+}
 
 #fire-container {
-  font-size: 22px;
-	filter: blur(var(--blur));
-	-webkit-filter: blur(var(--blur));
-	position: relative;
-	width: 8em;
-	/* height: 12em; */
+    font-size: 22px;
+    filter: blur(var(--blur));
+    -webkit-filter: blur(var(--blur));
+    position: relative;
+    width: 8em;
 }
 
 #fire-container .particle {
-	animation: rise var(--fireDuration) ease-in infinite;
-	background-image: radial-gradient(var(--fireColor1) 30%,var(--fireColor2) 70%);
-	border-radius: 50%;
-	mix-blend-mode: screen;
-	opacity: 0;
-	position: absolute;
-	bottom: 0;
-	width: var(--fireSize);
-	height: var(--fireSize);
+    animation: rise var(--fireDuration) ease-in infinite;
+    background-image: radial-gradient(var(--fireColor1) 30%, var(--fireColor2) 70%);
+    border-radius: 50%;
+    mix-blend-mode: screen;
+    opacity: 0;
+    position: absolute;
+    bottom: 0;
+    width: var(--fireSize);
+    height: var(--fireSize);
 }
 
 #buttons {
-  display: flex;
-  position: relative;
+    display: flex;
+    position: relative;
 }
 
 #yeah {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @keyframes rise {
-	from {
-		opacity: 0;
-		transform: translateY(0) scale(1);
-	}
-	25% {
-		opacity: 1;
-	}
-	to {
-		opacity: 0;
-		transform: translateY(-10em) scale(0);
-	}
+    from {
+        opacity: 0;
+        transform: translateY(0) scale(1);
+    }
+
+    25% {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        transform: translateY(-10em) scale(0);
+    }
 }
 
 @keyframes fly-away {
-  0% {
-    opacity: 1;
-    filter: blur(1px);
-  }
+    0% {
+        opacity: 1;
+        filter: blur(1px);
+    }
 
-  100% {
-    transform: scale(0.3);
-    opacity: 0;
-    filter: blur(20px);
-    border-radius: 50%;
-  }
+    100% {
+        transform: scale(0.3);
+        opacity: 0;
+        filter: blur(20px);
+        border-radius: 50%;
+    }
 }
-
-
-
