--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,13 @@ header {
     width: calc(100% - 10%);
     margin: 0 auto;
     /* margin: 0px 22px; */
-    padding: 21px;
+    /* padding: 21px; */
     border-right: 1px solid #000;
     border-left: 1px solid #000;
+}
+
+nav {
+    padding: 21px;
 }
 
 main {
@@ -131,6 +135,38 @@ img {
 
 .header__circle-right {
     background-color: #8B83F6;
+}
+
+.mobile {
+   
+}
+
+.mobile__box{
+    display: block;
+  position: relative;
+  top: 120px;
+  height: 100%;
+}
+
+.mobile-menu  {
+    display: none;}
+
+.active-box  {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    position: absolute;
+    padding: 32px 12px;
+    background: #fffcf7;
+    border-right: 1px solid #000;
+    border-bottom: 1px solid #000;
+    z-index: 99999999;
+    right: 50%;
+    left: 0;
+}
+
+.mobile-menu a {
+    font-size: 32px;
 }
 
 .hamburger {
