--- a/css/media.css
+++ b/css/media.css
@@ -171,6 +171,9 @@
 }
 
 @media (width <=780px) {
+    /* header, main, footer {
+        width: calc(100% - 1%);
+    } */
     .content-desc>h3 {
         font-size: 18px;
         margin-top: 21px;
@@ -296,9 +299,14 @@
     .header__menu {
         flex-direction: column;
     }
+
 }
 
 @media (width <=660px) {
+
+    .active-box {
+        right: 10%;
+    }
 
     .content__head {
         text-align: center;
