--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,24 @@
     padding: 0;
 }
 
+*::before,
+*::after {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+:where(ul, ol):where([class]) {
+    padding-left: 0;
+}
+
+:where(h1, h2, h3, h4, h5, h6, p, ul, ol, dl):where([class]) {
+    margin-block: 0;
+}
+
+:where(ul[class]) {
+    list-style: none;
+}
+
 html, body {
     height: 100%;
     min-height: 100%;
@@ -23,6 +41,7 @@ body {
     text-transform: uppercase;
     /* background-color: #FFF; */
     background: #fffcf7;
+    text-wrap: balance;
 }
 
 header {
@@ -90,6 +109,92 @@ img {
     object-fit: cover;
 }
 
+/* Loader */
+.loader-wrapper {
+    --curtain-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+}
+
+.loader {
+    display: block;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    width: 250px;
+    height: 250px;
+    margin: -115px 0 0 -115px;
+    z-index: 10000001;
+}
+
+.loader:before {
+    background-image: url(../img/loader/tenor.gif);
+    background-repeat: no-repeat;
+    background-size: contain;
+    content: "";
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    right: 4px;
+    bottom: 4px;
+}
+
+.loader-wrapper .loader-section {
+    position: fixed;
+    top: 0;
+    background: var(--curtain-color);
+    width: 50%;
+    height: 100%;
+    z-index: 10000;
+}
+
+.loader-wrapper .loader-section.section-left {
+    left: 0
+}
+
+.loader-wrapper .loader-section.section-right {
+    right: 0;
+}
+
+.loaded .loader-wrapper .loader-section.section-left {
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%);
+    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    -o-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+}
+
+.loaded .loader-wrapper .loader-section.section-right {
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    transform: translateX(100%);
+    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    -o-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
+}
+
+.loaded .loader {
+    opacity: 0;
+    -webkit-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+
+.loaded .loader-wrapper {
+    visibility: hidden;
+    -webkit-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    transform: translateY(-100%);
+    -webkit-transition: all .3s 1s ease-out;
+    -o-transition: all .3s 1s ease-out;
+    transition: all .3s 1s ease-out;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -138,45 +243,22 @@ img {
 }
 
 .mobile {
-   
-}
-
-.mobile__box{
-    display: block;
-  position: relative;
-  top: 120px;
-  height: 100%;
-}
-
-.mobile-menu  {
-    display: none;}
-
-.active-box  {
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    position: absolute;
-    padding: 32px 12px;
-    background: #fffcf7;
-    border-right: 1px solid #000;
-    border-bottom: 1px solid #000;
-    z-index: 99999999;
-    right: 50%;
-    left: 0;
-}
-
-.mobile-menu a {
-    font-size: 32px;
+    position: relative;
+    
 }
 
 .hamburger {
-   display: none;
+    display: none;
+    height: 100%;
 }
 
 .hamburger.ham-mobile {
+    position: absolute;
     display: block;
     float: left;
     text-align: center;
+    margin-left: 20px;
+    margin-top: 45px;
 }
 
 .hamburger .hamburger__line {
@@ -192,18 +274,48 @@ img {
     cursor: pointer;
 }
 
+.mobile__box {
+    display: block;
+    position: relative;
+    top: 120px;
+    height: 100%;
+}
 
-.hamburger.ham-active .hamburger__line:nth-child(2){
+.mobile-menu {
+    display: none;
+}
+
+.active-box {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    position: absolute;
+    padding: 32px 12px;
+    background: #fffcf7;
+    border-right: 1px solid #000;
+    border-bottom: 1px solid #000;
+    z-index: 99999999;
+    right: 50%;
+    left: 0;
+    transition: all 0.3 ease-in-out;
+}
+
+.mobile-menu a {
+    font-size: 32px;
+}
+
+
+.hamburger.ham-active .hamburger__line:nth-child(2) {
     opacity: 0;
-  }
-  
-  .hamburger.ham-active .hamburger__line:nth-child(1){
+}
+
+.hamburger.ham-active .hamburger__line:nth-child(1) {
     transform: translateY(6px) rotate(45deg);
-  }
-  
-  .hamburger.ham-active .hamburger__line:nth-child(3){
+}
+
+.hamburger.ham-active .hamburger__line:nth-child(3) {
     transform: translateY(-10px) rotate(-45deg);
-  }
+}
 
 .content {
     display: flex;
