--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 
 * {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -72,6 +73,8 @@ footer {
     border-bottom: 1px solid #000;
     background: url(../img/footer/footer-flames.svg) no-repeat;
     background-size: cover;
+    -webkit-transition: background 0.6s ease-in;
+    -o-transition: background 0.6s ease-in;
     transition: background 0.6s ease-in;
 }
 
@@ -106,6 +109,7 @@ p, span {
 img {
     width: 100%;
     height: auto;
+    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -196,13 +200,23 @@ img {
 }
 
 .header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
 .header__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 31px;
 }
@@ -212,23 +226,33 @@ img {
     line-height: calc(1 + 0.3 / var(--font-body-scale));
     border-radius: 50%;
     font-size: 14px;
+    -webkit-transition: .2s ease-in-out;
+    -o-transition: .2s ease-in-out;
     transition: .2s ease-in-out;
 }
 
 .header__menu-link:hover {
+    -webkit-box-shadow: inset 0 0 0 1px #222;
     box-shadow: inset 0 0 0 1px #222;
 }
 
 .header__img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 30px;
 }
 
 .header__circle {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 17px;
     height: 17px;
+    -ms-flex-negative: 0;
     flex-shrink: 0;
     border-radius: 100px;
     border: 1px solid #000;
@@ -244,7 +268,7 @@ img {
 
 .mobile {
     position: relative;
-    
+
 }
 
 .hamburger {
@@ -267,6 +291,8 @@ img {
     background-color: #121212;
     display: block;
     margin: 6px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
 
@@ -286,7 +312,12 @@ img {
 }
 
 .active-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: 24px;
     position: absolute;
@@ -297,6 +328,8 @@ img {
     z-index: 99999999;
     right: 50%;
     left: 0;
+    -webkit-transition: all 0.3 ease-in-out;
+    -o-transition: all 0.3 ease-in-out;
     transition: all 0.3 ease-in-out;
 }
 
@@ -310,15 +343,22 @@ img {
 }
 
 .hamburger.ham-active .hamburger__line:nth-child(1) {
+    -webkit-transform: translateY(6px) rotate(45deg);
+    -ms-transform: translateY(6px) rotate(45deg);
     transform: translateY(6px) rotate(45deg);
 }
 
 .hamburger.ham-active .hamburger__line:nth-child(3) {
+    -webkit-transform: translateY(-10px) rotate(-45deg);
+    -ms-transform: translateY(-10px) rotate(-45deg);
     transform: translateY(-10px) rotate(-45deg);
 }
 
 .content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
@@ -336,7 +376,12 @@ img {
 
 .content__desc-mobile {
     display: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 20px;
     border-bottom: 1px solid #000;
@@ -352,19 +397,27 @@ img {
 }
 
 .content__ticker {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
 .content__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     white-space: nowrap;
+    -ms-flex-negative: 0;
     flex-shrink: 0;
     text-align: center;
     font-family: 'Roboto', sans-serif;
     font-size: 21px;
     font-weight: 600;
     line-height: 26px;
+    -webkit-animation: ticker 5s linear infinite;
     animation: ticker 5s linear infinite;
 }
 
@@ -372,23 +425,45 @@ img {
     padding: 0 38px;
 }
 
-@keyframes ticker {
+@-webkit-keyframes ticker {
     0% {
+        -webkit-transform: translateZ(0);
         transform: translateZ(0);
     }
 
     to {
+        -webkit-transform: translate3d(-100%, 0, 0);
+        transform: translate3d(-100%, 0, 0)
+    }
+}
+
+@keyframes ticker {
+    0% {
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
+    }
+
+    to {
+        -webkit-transform: translate3d(-100%, 0, 0);
         transform: translate3d(-100%, 0, 0)
     }
 }
 
 
 .content-desc {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 18px;
     padding: 20px 20px 30px 20px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -414,8 +489,15 @@ img {
 }
 
 .content__desc {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 20px;
     border-bottom: 1px solid #000;
@@ -445,7 +527,12 @@ img {
     color: #000;
     text-decoration: none;
     border-radius: 50%;
+    -webkit-box-shadow: inset 0 0 0 1px #000;
     box-shadow: inset 0 0 0 1px #000;
+    -webkit-transition: color .2s ease-in-out,
+        background-color .3s ease-in-out;
+    -o-transition: color .2s ease-in-out,
+        background-color .3s ease-in-out;
     transition: color .2s ease-in-out,
         background-color .3s ease-in-out;
 }
@@ -465,8 +552,14 @@ img {
 }
 
 .products__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     padding: 59px 30px;
     border-bottom: 1px solid #000;
@@ -482,13 +575,19 @@ img {
 }
 
 .products__swiper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 23px;
     padding: 20px;
 }
 
 .products__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     background-image: url(../img/products/bg.svg);
     background-repeat: no-repeat;
@@ -497,9 +596,18 @@ img {
 }
 
 .products__desc {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 14px;
     padding: 23px;
@@ -522,6 +630,8 @@ img {
     width: 390px;
     height: 411px;
     border-radius: 14px;
+    -webkit-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
 
@@ -531,6 +641,8 @@ img {
 
 .products__figure img:hover {
     cursor: pointer;
+    -webkit-transform: scale(1.02);
+    -ms-transform: scale(1.02);
     transform: scale(1.02);
 }
 
@@ -540,8 +652,14 @@ img {
 }
 
 .swiper__btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 38px;
     cursor: pointer;
@@ -549,6 +667,8 @@ img {
 }
 
 .swiper__pag {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -567,7 +687,11 @@ img {
 }
 
 .about {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
@@ -577,8 +701,14 @@ img {
 }
 
 .about__name {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -586,6 +716,8 @@ img {
     max-width: 590px;
     padding-top: 54px;
     padding-bottom: 23px;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
     hyphens: auto;
     text-align: center;
     font-size: 58px;
@@ -623,8 +755,15 @@ img {
     background-size: contain;
     background-position: center;
     aspect-ratio: 1/1;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: 24px;
     width: 50%;
@@ -660,8 +799,14 @@ img {
 }
 
 .footer__contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     padding: 20px 40px;
     border-top: 1px solid #000;
@@ -673,6 +818,8 @@ img {
     font-size: 15px;
     font-weight: 600;
     line-height: 24px;
+    -webkit-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
 
@@ -689,6 +836,8 @@ img {
 }
 
 .footer__icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 16px;
 }
@@ -696,6 +845,8 @@ img {
 .footer__icons-img {
     width: 40px;
     height: 40px;
+    -webkit-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
 
@@ -721,7 +872,9 @@ img {
 }
 
 #fire-container .particle {
+    -webkit-animation: rise var(--fireDuration) ease-in infinite;
     animation: rise var(--fireDuration) ease-in infinite;
+    background-image: -o-radial-gradient(var(--fireColor1) 30%, var(--fireColor2) 70%);
     background-image: radial-gradient(var(--fireColor1) 30%, var(--fireColor2) 70%);
     border-radius: 50%;
     mix-blend-mode: screen;
@@ -733,19 +886,28 @@ img {
 }
 
 #buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     position: relative;
 }
 
 #yeah {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
-@keyframes rise {
+@-webkit-keyframes rise {
     from {
         opacity: 0;
+        -webkit-transform: translateY(0) scale(1);
         transform: translateY(0) scale(1);
     }
 
@@ -755,19 +917,58 @@ img {
 
     to {
         opacity: 0;
+        -webkit-transform: translateY(-10em) scale(0);
         transform: translateY(-10em) scale(0);
+    }
+}
+
+@keyframes rise {
+    from {
+        opacity: 0;
+        -webkit-transform: translateY(0) scale(1);
+        transform: translateY(0) scale(1);
+    }
+
+    25% {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        -webkit-transform: translateY(-10em) scale(0);
+        transform: translateY(-10em) scale(0);
+    }
+}
+
+@-webkit-keyframes fly-away {
+    0% {
+        opacity: 1;
+        -webkit-filter: blur(1px);
+        filter: blur(1px);
+    }
+
+    100% {
+        -webkit-transform: scale(0.3);
+        transform: scale(0.3);
+        opacity: 0;
+        -webkit-filter: blur(20px);
+        filter: blur(20px);
+        border-radius: 50%;
     }
 }
 
 @keyframes fly-away {
     0% {
         opacity: 1;
+        -webkit-filter: blur(1px);
         filter: blur(1px);
     }
 
     100% {
+        -webkit-transform: scale(0.3);
         transform: scale(0.3);
         opacity: 0;
+        -webkit-filter: blur(20px);
         filter: blur(20px);
         border-radius: 50%;
     }
