--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,9 @@ footer {
     border-bottom: 1px solid #000;
     background: url(../img/footer/footer-flames.svg) no-repeat;
     background-size: cover;
-    -webkit-transition: background 0.6s ease-in;
-    -o-transition: background 0.6s ease-in;
-    transition: background 0.6s ease-in;
+    -webkit-transition: background 0.4s ease-in;
+    -o-transition: background 0.4s ease-in;
+    transition: background 0.4s ease-in;
 }
 
 footer:hover {
@@ -298,9 +298,11 @@ img {
 .mobile__box {
     display: block;
     position: relative;
-    /* width: calc(100vw - 3rem); */
     top: 120px;
     height: 100%;
+    -webkit-transition: all 0.3s ease-in;
+    -o-transition: all 0.3s ease-in;
+    transition: all 0.3s ease-in;
 }
 
 .mobile-menu {
@@ -317,16 +319,13 @@ img {
     flex-direction: column;
     gap: 30px;
     position: absolute;
-    padding: 32px 12px;
+    padding: 44px 12px;
     background: #fffcf7;
     border-right: 1px solid #000;
     border-bottom: 1px solid #000;
     z-index: 99999999;
     right: 50%;
     left: 0;
-    -webkit-transition: all 0.3 ease-in-out;
-    -o-transition: all 0.3 ease-in-out;
-    transition: all 0.3 ease-in-out;
 }
 
 .mobile-menu a {
