--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ html, body {
 }
 
 body {
+    overflow-y: scroll;
     overflow-x: hidden;
     font-family: 'Comic Neue', 'Roboto', 'sans-serif';
     color: #000;
@@ -43,6 +44,20 @@ body {
     background: #fffcf7;
     text-wrap: balance;
 }
+
+body::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: #8B83F6;        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: #CDFD3B;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    border: 3px solid #8B83F6;   /* creates padding around scroll thumb */
+  }
 
 header {
     width: calc(100% - 10%);
