--- a/css/style.css
+++ b/css/style.css
@@ -46,18 +46,18 @@ body {
 }
 
 body::-webkit-scrollbar {
-    width: 12px;               /* width of the entire scrollbar */
-  }
-  
-  body::-webkit-scrollbar-track {
-    background: #8B83F6;        /* color of the tracking area */
-  }
-  
-  body::-webkit-scrollbar-thumb {
-    background-color: #CDFD3B;    /* color of the scroll thumb */
-    border-radius: 20px;       /* roundness of the scroll thumb */
-    border: 3px solid #8B83F6;   /* creates padding around scroll thumb */
-  }
+    width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+    background: #8B83F6;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #CDFD3B;
+    border-radius: 20px;
+    border: 3px solid #8B83F6;
+}
 
 header {
     width: calc(100% - 10%);
@@ -867,7 +867,7 @@ img {
     --fireSize: 60px;
 }
 
-#buttons-container, #btns-container{
+#buttons-container, #btns-container {
     display: none;
 }
 
